k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echoverse
  labels:
    name: echoverse
    environment: production
